# NoWebsocket

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py  test_client.html
NoWebsocket/: __init__.py  application.py  connection.py  constants.py  exceptions.py  protocol.py  router.py  server.py  utils.py
blueprints/: EchoBp.py
blueprints/chat/: Uer.py
websocket/: constants.py  exceptions.py  router.py  utils.py
