[project]
name = "NoWebsocket"
version = "1.0.1"
authors = [
  { name="dzy", email="1129881228@email.com" },
]
description = "一个基于装饰器与自动模块的Python WebSocket服务端框架，支持零配置多文件路由管理，实现高效、模块化的实时通信开发。"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["WebSocket", "装饰器", "WebSocket服务"]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/yourusername/your-module"